--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -2,6 +2,7 @@
   border: 2px solid;
   padding: 15px;
   margin-bottom: 15px;
+  background-color: darkseagreen;
 }
 
 .tweet:hover {
@@ -11,11 +12,13 @@
 .user-header {
   font-size: 20px;
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
 }
 
 .username {
   color: rgb(200, 197, 197);
+  margin-left: 10px;
 }
 
 .tweet-content {
